# fastapi-clean-architecture

./: .gitignore  README.md  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 0a7f58de7ef1_add_customm.py
app/: db_model.py  main.py  router.py
app/common/: base_business.py  base_entity.py  base_storage.py  base_transport.py  client_filter.py  parameters.py  query_builder.py
app/common/db/: __init__.py  deps.py  get_db.py  session.py
app/component/: __init__.py
app/config/: config.py  security.py
app/helper/: gen_date.py  generate.py  string_case.py
app/modules/auth/: __init__.py
app/modules/auth/business/: __init__.py  auth_biz.py
app/modules/auth/model/: __init__.py  bear_token.py  login.py
app/modules/auth/storage/: __init__.py  auth_storage.py
app/modules/auth/transport/: __init__.py  auth_transport.py
app/modules/items/model/: __init__.py  item_schema.py
app/modules/items/storage/: item_storage.py
app/modules/items/transport/: __init__.py  item_transport.py
app/modules/products/: __init__.py
app/modules/products/business/: product_biz.py
app/modules/users/: __init__.py
cli/: cli.py
cli/module/: __init__.hbs
cli/module/business/: item_biz.hbs  {{name_sing}}_biz.hbs  {{name}}_biz.hbs
cli/module/model/: __init__.hbs  item_entity.hbs  {{name_sing}}_schema.hbs  {{name}}_entity.hbs  {{name}}_schema.hbs
cli/module/storage/: __init__.hbs  item_storage.hbs  {{name_sing}}_storage.hbs  {{name}}_storage.hbs
cli/module/transport/: __init__.hbs  {{name_sing}}_transport.hbs  {{name}}_transport.hbs
(+15 files in other folders)
